# IFJ-2019

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiler  err.h  gramatika.txt  grammar-java-app.txt  ic19int  main.c  my_string.c  my_string.h  parser.c  parser.h  run_tests.py  scanner.c  scanner.h  test.c  test.txt  text.txt
kamil_snippets/: badbuildin2.py  badbuildin3.py  badbuildin4.py  badbuildin5.py  badbuildin6.py  badbuildin7.py  badbuildin8.py  badcall.py  badcall2.py  badcall3.py  badcall4.py  badcall5.py  badchars.py  badcomment.py  badcomment2.py  baddot.py  badexponent.py  badexpr.py  badexpr2.py  badexpr3.py  badexpr4.py  badexpr5.py  badfunction.py  badfunction2.py  badfunction3.py  badfunction4.py  badfunction5.py  badfunction6.py  badfunction7.py  badfunction8.py  badfunction9.py  badif.py  badif2.py  badif3.py  badindent.py  badindent2.py  badindent3.py  badreturn.py  badstring.py  badtype.py  (+24 more)
misc/: grammar-java-app.txt  grammar-web-app.txt  ifjcode19_inner_func  print_token_type-script.py  rozdeleni
snippets/: def_fun.py  def_fun_ret.py  docstring_as_literal.py  err3_sem_redefine_local_x_global.py  given-sample-3.py  koule.py  ok_assign_another_var.py  ok_def_fun_ret.py  ok_expressions.py  ok_if_else.py  ok_one_var_assigned_twice.py  print_token_type-script.py  redefine-local_x_global.py  redefine-variable.ppy  redefine-variable.py  redefine_fun-x-var.py  test.py  top-down_x_psa.py  while.py
src/: code_gen.c  code_gen.h  err.h  exp_stack.c  exp_stack.h  main.c  my_string.c  my_string.h  parser.c  parser.h  psa.c  psa.h  psa_stack_declarations.h  scanner.c  scanner.h  stack.c  (+8 more)
(+19 files in other folders)
